updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Audio post production engineer and voice over artist transitioning into a new career path! I love creating and solving problems and expect that to translate into a career in front end development. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Charleston, South Carolina</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Guitar and woodworking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>UX/UI designer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Indian Trail</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Web development reminds me a lot of music. It involves a bunch of pieces that fit together to create something awesome. I love knowing how things work together and seeing the outcome of creative problem solving.</p>
     </section>
 
     <footer id="footer">
